--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 body {
   width: 1387px;
   margin: 0 auto;
@@ -117,14 +116,25 @@ p {
   color: #fafafa; }
 
 .page-header {
+  position: relative;
   box-sizing: border-box;
   min-height: 782px;
-  padding-top: 30px;
+  padding-top: 221px;
   background: #000000 url("../img/header.jpg") no-repeat; }
 
 .page-header__top {
-  /*Обертка для реализации плавающего меню*/
-  width: 100%; }
+  width: 100%;
+  position: absolute;
+  top: 30px;
+  left: 0; }
+
+.page-header__top--fixed {
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  background-color: rgba(0, 0, 0, 0.8); }
 
 .page-header__wrapper {
   display: flex;
@@ -132,9 +142,7 @@ p {
   flex-wrap: wrap;
   align-items: flex-end;
   width: 1014px;
-  margin: 0 auto;
-  margin-bottom: 88px;
-  /*убрать при плавающем меню*/ }
+  margin: 0 auto; }
 
 .page-header__phone {
   margin-right: 26px;
